new image generation library